[gd_scene load_steps=7 format=3 uid="uid://ck8gu485r1kao"]

[ext_resource type="Texture2D" uid="uid://dbebia7fx1r3" path="res://player/player.png" id="1"]
[ext_resource type="Script" path="res://player/Player.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://cbhklhtcsjos4" path="res://player/bullet/bullet.wav" id="3"]
[ext_resource type="Texture2D" uid="uid://cboak4b7pood7" path="res://player/orb/orb.png" id="4"]
[ext_resource type="AudioStream" uid="uid://bg58h41cyepd1" path="res://items/item_up/item_up.wav" id="5"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 8.0
height = 16.0

[node name="Player" type="Area2D"]
collision_mask = 12
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("1")

[node name="ImmortalityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.35

[node name="ShotPositions" type="Node2D" parent="."]

[node name="1" type="Node2D" parent="ShotPositions"]

[node name="Position1" type="Marker2D" parent="ShotPositions/1"]
position = Vector2(0, -8)
rotation = -1.5708

[node name="2" type="Node2D" parent="ShotPositions"]

[node name="Position1" type="Marker2D" parent="ShotPositions/2"]
position = Vector2(-4, -8)
rotation = -1.5708

[node name="Position2" type="Marker2D" parent="ShotPositions/2"]
position = Vector2(4, -8)
rotation = -1.5708

[node name="3" type="Node2D" parent="ShotPositions"]

[node name="Position1" type="Marker2D" parent="ShotPositions/3"]
position = Vector2(0, -8)
rotation = -1.5708

[node name="Position2" type="Marker2D" parent="ShotPositions/3"]
position = Vector2(-4, -8)
rotation = -1.5708

[node name="Position3" type="Marker2D" parent="ShotPositions/3"]
position = Vector2(4, -8)
rotation = -1.5708

[node name="4" type="Node2D" parent="ShotPositions"]

[node name="Position1" type="Marker2D" parent="ShotPositions/4"]
position = Vector2(-2, -8)
rotation = -1.5708

[node name="Position2" type="Marker2D" parent="ShotPositions/4"]
position = Vector2(2, -8)
rotation = -1.5708

[node name="Position3" type="Marker2D" parent="ShotPositions/4"]
position = Vector2(-6, -8)
rotation = -1.5708

[node name="Position4" type="Marker2D" parent="ShotPositions/4"]
position = Vector2(6, -8)
rotation = -1.5708

[node name="5" type="Node2D" parent="ShotPositions"]

[node name="Position1" type="Marker2D" parent="ShotPositions/5"]
position = Vector2(-2, -8)
rotation = -1.5708

[node name="Position2" type="Marker2D" parent="ShotPositions/5"]
position = Vector2(2, -8)
rotation = -1.5708

[node name="Position3" type="Marker2D" parent="ShotPositions/5"]
position = Vector2(-6, -8)
rotation = -1.5708

[node name="Position4" type="Marker2D" parent="ShotPositions/5"]
position = Vector2(6, -8)
rotation = -1.5708

[node name="Position5" type="Marker2D" parent="ShotPositions/5"]
position = Vector2(9, -5)
rotation = -1.5708

[node name="Position6" type="Marker2D" parent="ShotPositions/5"]
position = Vector2(-9, -5)
rotation = -1.5708

[node name="6" type="Node2D" parent="ShotPositions"]

[node name="Position1" type="Marker2D" parent="ShotPositions/6"]
position = Vector2(-2, -8)
rotation = -1.5708

[node name="Position2" type="Marker2D" parent="ShotPositions/6"]
position = Vector2(2, -8)
rotation = -1.5708

[node name="Position3" type="Marker2D" parent="ShotPositions/6"]
position = Vector2(-6, -8)
rotation = -1.5708

[node name="Position4" type="Marker2D" parent="ShotPositions/6"]
position = Vector2(6, -8)
rotation = -1.5708

[node name="Position5" type="Marker2D" parent="ShotPositions/6"]
position = Vector2(9, -5)
rotation = -1.5708

[node name="Position6" type="Marker2D" parent="ShotPositions/6"]
position = Vector2(-9, -5)
rotation = -1.5708

[node name="Position7" type="Marker2D" parent="ShotPositions/6"]
position = Vector2(-11, -2.38419e-07)
rotation = -1.5708

[node name="Position8" type="Marker2D" parent="ShotPositions/6"]
position = Vector2(11, -2.38419e-07)
rotation = -1.5708

[node name="Orbs" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.784314)

[node name="1" type="Node2D" parent="Orbs"]
visible = false

[node name="Orb" type="Sprite2D" parent="Orbs/1"]
position = Vector2(0, -14)
texture = ExtResource("4")

[node name="2" type="Node2D" parent="Orbs"]
visible = false

[node name="Orb" type="Sprite2D" parent="Orbs/2"]
position = Vector2(0, -14)
texture = ExtResource("4")

[node name="Orb2" type="Sprite2D" parent="Orbs/2"]
position = Vector2(0, 14)
texture = ExtResource("4")

[node name="3" type="Node2D" parent="Orbs"]
visible = false

[node name="Orb" type="Sprite2D" parent="Orbs/3"]
position = Vector2(0, -14)
texture = ExtResource("4")

[node name="Orb2" type="Sprite2D" parent="Orbs/3"]
position = Vector2(-11, 9)
texture = ExtResource("4")

[node name="Orb3" type="Sprite2D" parent="Orbs/3"]
position = Vector2(11, 9)
texture = ExtResource("4")

[node name="Audio" type="Node2D" parent="."]

[node name="BulletAudio" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("3")
volume_db = -10.0
pitch_scale = 0.75

[node name="ItemUpAudio" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("5")
volume_db = -4.0
pitch_scale = 0.9

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="ImmortalityTimer" to="." method="_on_ImmortalityTimer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
